Refacto sonarlint